[gd_scene load_steps=2 format=3 uid="uid://cqwcm5uf8ovdi"]

[ext_resource type="Script" path="res://scenes/grayscale.gd" id="1_ejl2s"]

[node name="GrayScale" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejl2s")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="TextureRect" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
